@@ -284,7 +284,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12</version>
         <configuration>
-          <argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
+          <argLine>-Xmx512M</argLine>
           <runOrder>alphabetical</runOrder>
           <includes>
             <include>**/*Test.java</include>
